# speech-to-text

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt  run_app.sh  synthesizer.py  transcriber.py  workflow_media.py
tests/: conftest.py  test_synthesizer.py  test_transcriber.py
