[project]
name = "speech-to-text"
version = "0.1.0"
description = "Simple Streamlit speech-to-text app for Turkish and English."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.0",
    "streamlit>=1.28.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["transcriber"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require model download",
]
